Populated components with topics.js and photos.js.

--- a/frontend/src/styles/FavBadge.scss
+++ b/frontend/src/styles/FavBadge.scss
@@ -1,5 +1,7 @@
 .fav-badge {
-  // margin-right: 20px; I added this to make the Fav badge line up
+    //I added this to make the Fav badge line up
+  margin-right: 20px; 
+
   position: relative;
 }
 
