--- a/frontend/src/styles/PhotoList.scss
+++ b/frontend/src/styles/PhotoList.scss
@@ -12,3 +12,11 @@
   flex: 0 1 30%;
   margin: 5px;
 }
+
+@media only screen and (max-width: 796px) {
+
+  .photo-list{
+    justify-content: center;
+  }
+
+}
