--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -46,3 +46,24 @@
 .photo-list__user-location {
   color: #838383;
 }
+
+@media only screen and (max-width: 796px) {
+  .photo-list__item {
+    margin: 12px;
+    padding: 16px;
+    border-width: 0.5px;
+    border-color: lightgray;
+    border-style: solid;
+    border-radius: 8px;
+    height: 100%;
+    background-color: #F5F5F5;
+  }
+
+.photo-list__image{
+  border-radius: 8px 8px 0px 0px;
+  user-select: none;
+  width: 500px;
+  height: 500px;
+}
+
+}
