--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -18,3 +18,15 @@
   text-underline-position: auto;
   margin-left: 24px;
 }
+
+.top-nav-bar-favorite {
+  font-size: 20px;
+  text-decoration: none;
+  font-weight: 500;
+  color: #2b2b2b;
+
+  &:hover {
+    text-decoration: overline;
+    color: #111;
+  }
+}
